--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fps": "^1.0.6",
     "throttle-typescript": "^1.1.0"
   },
   "devDependencies": {
